docs/how-to/webhook/allowedrepos/bad-example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-cic
  namespace: production
spec:
  containers:
    - name: test-cic
      image: quay.io/citrix/citrix-k8s-ingress-controller:latest
