docs/how-to/webhook/allowedrepos/good-example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-cic
  namespace: production
spec:
  containers:
    - name: test-cic
      image: quay.io/netscaler/netscaler-k8s-ingress-controller:4.1.17
